<resources>
    <string name="app_name">Mentor</string>
    <string name="cahum_texto">CAHUM</string>
    <string name="textoBotonChat">Chat</string>
    <string name="textoBotonMenu">Menu</string>
    <string name="title_activity_pantalla_progeso">PantallaProgeso</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="descripcionLogo">Logo Cahum</string>
    <string name="titulo_sign_out">Sign Out</string>
    <string name="titulo_perfil_menu">Perfil</string>
    <string name="titulo_nuevos_clientes_menu">Nuevos Clientes</string>
    <string name="title_activity_nuevos_clientes">NuevosClientesActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="img_usuario">Imagen de usuario</string>
    <string name="texto_chatlog">Mandar mensaje</string>
    <string name="texto_enviar">Enviar</string>
    <string name="texto_correo">Correo</string>
    <string name="boton_registrar">Registrar</string>
    <string name="texto_password">Contraseña</string>
    <string name="texto_nombre">Nombre</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="item_calendario">Calendario</string>
    <string name="desc_img_estrella">Img de estrella</string>
    <string name="checkbox_cv">Currículum de alto impacto</string>
    <string name="checkbox_linkedin">Perfil de LinkedIn</string>
    <string name="checkbox_simulador">Simulador de entrevista</string>
    <string name="checkbox_psicometria">Psicometría</string>
    <string name="checkbox_estrategia">Estrategia de busqueda de empleo</string>
    <string name="boton_cita">Crear Cita</string>
    <string name="texto_cita_con">"Cita con "</string>
    <string name="texto_hora">Hora</string>
    <string name="texto_duracion">Duración:</string>
    <string name="texto_terminos_y_condiciones">He leído los términos y condiciones</string>
</resources>
