<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IniciarSesionActivity" android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/texto_correo_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true" android:layout_marginLeft="30dp" android:layout_marginRight="30dp"
            android:layout_marginTop="100dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/texto_correo" android:inputType="textPersonName" android:textAllCaps="false"
                android:background="@drawable/rounded_corners_orange_empty" android:padding="10dp"
        />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/texto_password_signin"
            android:hint="@string/texto_password" android:layout_marginLeft="30dp" android:layout_marginRight="30dp"
            android:layout_marginTop="25dp">
        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_height="wrap_content" android:layout_width="match_parent"
                android:background="@drawable/rounded_corners_orange_empty"
                android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/boton_iniciar" android:layout_marginTop="50dp"
            android:layout_gravity="center" android:background="@drawable/rounded_corners_orange_empty"
            android:textColor="#000000" android:padding="20dp" android:textSize="12sp"/>

    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:foregroundGravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:layout_marginTop="30dp"
    >
    </com.google.android.gms.common.SignInButton>
</LinearLayout>